--- a/specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/cdnwebapplicationfirewall.json
+++ b/specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/cdnwebapplicationfirewall.json
@@ -396,6 +396,12 @@
             "$ref": "#/definitions/CdnEndpoint"
           }
         },
+        "migratedTo": {
+          "readOnly": true,
+          "description": "Reference of the Profile this is migrated to.",
+          "type": "object",
+          "$ref": "./cdn.json#/definitions/ResourceReference"
+        },
         "provisioningState": {
           "readOnly": true,
           "type": "string",
