More changes from review

--- a/specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/cdnwebapplicationfirewall.json
+++ b/specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/cdnwebapplicationfirewall.json
@@ -396,11 +396,12 @@
             "$ref": "#/definitions/CdnEndpoint"
           }
         },
-        "migratedTo": {
-          "readOnly": true,
-          "description": "Reference of the Profile this is migrated to.",
+        "extendedProperties": {
+          "description": "Key-Value pair representing additional properties for Web Application Firewall policy.",
           "type": "object",
-          "$ref": "./cdn.json#/definitions/ResourceReference"
+          "additionalProperties": {
+            "type": "string"
+          }
         },
         "provisioningState": {
           "readOnly": true,
