change x-ms-enum name to ensure unique enum names

--- a/specification/cdn/resource-manager/Microsoft.Cdn/stable/2020-09-01/cdnwebapplicationfirewall.json
+++ b/specification/cdn/resource-manager/Microsoft.Cdn/stable/2020-09-01/cdnwebapplicationfirewall.json
@@ -616,7 +616,7 @@
             "PostArgs"
           ],
           "x-ms-enum": {
-            "name": "MatchVariable",
+            "name": "WafMatchVariable",
             "modelAsString": true
           }
         },
